--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Um Dokumente gemeinsam mit Ihrem Team zu bearbeiten",
   "docspace.room.type.public.short-description": "Um Dateien mit externen Nutzern und Kunden zu teilen",
   "docspace.room.type.vdr.short-description": "Um erweiterten Dateischutz zu bieten",
-  "docspace.room.type.custom.short-description": "Um den Raum für individuelle Zwecke zu nutzen",
+  "docspace.room.type.custom.short-description": "",
   "docspace.room.type.form-filling-room.description": "Um Daten durch Ausfüllen von PDF-Formularen zu erfassen.",
   "docspace.room.type.collaboration.description": "Um in Echtzeit gemeinsam an Dokumenten, Tabellen und Präsentationen zu arbeiten.",
   "docspace.room.type.public.description": "Um Dokumente ohne Registrierung mit externen Nutzern zu teilen.",
