--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "To co-edit documents with your team",
   "docspace.room.type.public.short-description": "To share files with external users and clients",
   "docspace.room.type.vdr.short-description": "To provide advanced file protection",
-  "docspace.room.type.custom.short-description": "To work according to your goals",
+  "docspace.room.type.custom.short-description": "To use it for any custom purpose",
   "docspace.room.type.form-filling-room.description": "To collect data through filling out PDF forms.",
   "docspace.room.type.collaboration.description": "To collaborate on documents, spreadsheets, and presentations in real time.",
   "docspace.room.type.public.description": "To share documents with external users without requiring registration.",
