--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Для редактирования документов вместе с вашей командой",
   "docspace.room.type.public.short-description": "Для обмена файлами с внешними пользователями и клиентами",
   "docspace.room.type.vdr.short-description": "Для обеспечения расширенной защиты файлов",
-  "docspace.room.type.custom.short-description": "Для работы в соответствии с вашими целями",
+  "docspace.room.type.custom.short-description": "",
   "docspace.room.type.form-filling-room.description": "Для сбора данных посредством заполнения PDF-форм.",
   "docspace.room.type.collaboration.description": "Для совместной работы над текстовыми документами, электронными таблицами и презентациями в режиме реального времени.",
   "docspace.room.type.public.description": "Для обмена документами с внешними пользователями без регистрации.",
