feat: added welcome option settings.authorization.welcome.option3

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "Passwort",
   "settings.authorization.menu-item": "Autorisierung",
   "settings.authorization.welcome.title": "Willkommen bei DocSpace!",
-  "settings.authorization.welcome.option1": "Erstellen Sie einen Raum im Deal",
-  "settings.authorization.welcome.option2": "Laden Sie ein Dokument in den Raum hoch",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.option3": "",
   "settings.authorization.welcome.open-guide": "Leitfaden öffnen",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
   "settings.connection.saving.error.common-invalid-api-key": "Ungültiger DocSpace-API-Schlüssel, bitte versuchen Sie es erneut",
