--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "Contraseña",
   "settings.authorization.menu-item": "Autorización",
   "settings.authorization.welcome.title": "¡Bienvenido a DocSpace!",
-  "settings.authorization.welcome.option1": "Crear una sala en el acuerdo",
-  "settings.authorization.welcome.option2": "Subir un documento a la sala",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.option3": "",
   "settings.authorization.welcome.open-guide": "Abrir guía",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Clave de la API de DocSpace inválida, por favor inténtalo de nuevo.",
