--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "Mot de passe",
   "settings.authorization.menu-item": "Authorization",
   "settings.authorization.welcome.title": "Bienvenue à DocSpace !",
-  "settings.authorization.welcome.option1": "Créez une salle dans l'affaire",
-  "settings.authorization.welcome.option2": "Téléchargez un document dans la salle",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.option3": "",
   "settings.authorization.welcome.open-guide": "Ouvrir le guide",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Clé d'API DocSpace incorrecte, veuillez réessayer",
