--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "パスワード",
   "settings.authorization.menu-item": "認証",
   "settings.authorization.welcome.title": "DocSpaceへようこそ！",
-  "settings.authorization.welcome.option1": "案件にルームを作成する",
-  "settings.authorization.welcome.option2": "ルームにドキュメントをアップロード",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.option3": "",
   "settings.authorization.welcome.open-guide": "ガイドを開く",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
   "settings.connection.saving.error.common-invalid-api-key": "無効なDocSpace APIキーです。もう一度お試しください。",
