--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "Пароль",
   "settings.authorization.menu-item": "Авторизация",
   "settings.authorization.welcome.title": "Добро пожаловать в DocSpace!",
-  "settings.authorization.welcome.option1": "Создать комнату в сделке",
-  "settings.authorization.welcome.option2": "Загрузить документ в комнату",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.option3": "",
   "settings.authorization.welcome.open-guide": "Открыть руководство",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Неверный ключ API DocSpace, попробуйте еще раз",
