--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Authorization",
   "settings.authorization.welcome.title": "Welcome to DocSpace!",
-  "settings.authorization.welcome.option1": "Create a room in the deal",
-  "settings.authorization.welcome.option2": "Upload a document to the room",
+  "settings.authorization.welcome.option1": "Create rooms to work on deal documents",
+  "settings.authorization.welcome.option2": "Edit and collaborate on docs, sheets, slides, forms, PDFs",
+  "settings.authorization.welcome.option3": "Store your deal data securely in one single place",
   "settings.authorization.welcome.open-guide": "Open Guide",
   "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
   "settings.connection.saving.error.common-invalid-api-key": "Invalid DocSpace API key, please try again",
