--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -81,8 +81,9 @@
   "settings.authorization.inputs.password": "Senha",
   "settings.authorization.menu-item": "Autorização",
   "settings.authorization.welcome.title": "Bem-vindo ao DocSpace!",
-  "settings.authorization.welcome.option1": "Criar uma sala na oportunidade",
-  "settings.authorization.welcome.option2": "Carregar um documento para a sala",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.option3": "",
   "settings.authorization.welcome.open-guide": "Abrir Guia",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Chave de API do DocSpace inválida, tente novamente",
