edited options translations

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Um Dokumente gemeinsam mit Ihrem Team zu bearbeiten",
   "docspace.room.type.public.short-description": "Um Dateien mit externen Nutzern und Kunden zu teilen",
   "docspace.room.type.vdr.short-description": "Um erweiterten Dateischutz zu bieten",
-  "docspace.room.type.custom.short-description": "",
+  "docspace.room.type.custom.short-description": "Um den Raum für individuelle Zwecke zu nutzen",
   "docspace.room.type.form-filling-room.description": "Um Daten durch Ausfüllen von PDF-Formularen zu erfassen.",
   "docspace.room.type.collaboration.description": "Um in Echtzeit gemeinsam an Dokumenten, Tabellen und Präsentationen zu arbeiten.",
   "docspace.room.type.public.description": "Um Dokumente ohne Registrierung mit externen Nutzern zu teilen.",
@@ -81,9 +81,9 @@
   "settings.authorization.inputs.password": "Passwort",
   "settings.authorization.menu-item": "Autorisierung",
   "settings.authorization.welcome.title": "Willkommen bei DocSpace!",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
+  "settings.authorization.welcome.option1": "Erstellen Sie Räume für die Arbeit an Deal-Dokumenten",
+  "settings.authorization.welcome.option2": "Bearbeiten Sie Dokumente, Tabellen, Folien, Formulare und PDFs gemeinsam",
+  "settings.authorization.welcome.option3": "Speichern Sie Deal-Daten sicher an einem Ort",
   "settings.authorization.welcome.open-guide": "Leitfaden öffnen",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
   "settings.connection.saving.error.common-invalid-api-key": "Ungültiger DocSpace-API-Schlüssel, bitte versuchen Sie es erneut",
