--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Pour coéditer des documents avec votre équipe",
   "docspace.room.type.public.short-description": "Pour partager des fichiers avec des utilisateurs externes et des clients",
   "docspace.room.type.vdr.short-description": "Pour assurer une protection avancée des fichiers",
-  "docspace.room.type.custom.short-description": "",
+  "docspace.room.type.custom.short-description": "Pour l'utiliser à des fins personnalisées",
   "docspace.room.type.form-filling-room.description": "Pour collecter des données en remplissant des formulaires PDF.",
   "docspace.room.type.collaboration.description": "Pour collaborer en temps réel sur des documents, des feuilles de calcul et des présentations.",
   "docspace.room.type.public.description": "Pour partager des documents avec des utilisateurs externes sans inscription.",
@@ -81,9 +81,9 @@
   "settings.authorization.inputs.password": "Mot de passe",
   "settings.authorization.menu-item": "Authorization",
   "settings.authorization.welcome.title": "Bienvenue à DocSpace !",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
+  "settings.authorization.welcome.option1": "Créer des espaces pour travailler sur les documents de l'affaire",
+  "settings.authorization.welcome.option2": "Éditer et collaborer sur des documents, des feuilles de calcul, des présentations, des formulaires et des PDF",
+  "settings.authorization.welcome.option3": "Stocker vos données commerciales en toute sécurité en un seul et même endroit",
   "settings.authorization.welcome.open-guide": "Ouvrir le guide",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Clé d'API DocSpace incorrecte, veuillez réessayer",
