--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -17,24 +17,24 @@
   "background.error.hint.admin.docspace-connection": "Accedi alle Impostazioni di connessione per configurare le impostazioni dell'app ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Contatta l'amministratore.",
   "background.error.hint.webhook.is-not-installed": "La sincronizzazione tra i follower del Deal e i membri della Room non avviene a causa di un malfunzionamento del webhook.",
-  "button.back": "",
-  "button.deals": "",
+  "button.back": "Indietro",
+  "button.deals": "Vai Deals",
   "button.reauthorize": "Riautorizza",
   "button.settings": "Vai a Impostazioni",
   "button.create.room": "Crea stanza",
-  "button.login": "",
+  "button.login": "Accedi",
   "button.logout": "Esci",
   "button.disconnect": "Disconnetti",
   "button.connect": "Connetti",
   "button.change": "Cambia",
   "button.cancel": "Annulla",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
-  "button.finish": "",
-  "button.next": "",
-  "button.open-in-docspace": "",
+  "button.create-api-key": "Crea una chiave",
+  "button.forgot-password": "Password dimenticata?",
+  "button.finish": "Fine",
+  "button.next": "Avanti",
+  "button.open-in-docspace": "Apri in DocSpace",
   "button.save": "Salva",
-  "button.skip": "",
+  "button.skip": "Salta",
   "button.request-access": "Richiedi l'accesso",
   "button.reinstall": "Reinstalla l'app",
   "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace.",
@@ -42,78 +42,78 @@
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
   "docspace.error.payment": "Non è possibile creare la stanza. È stato raggiunto il limite del numero di stanze incluse nel tuo piano attuale.",
   "docspace.link.payments": "Esegui l'upgrade del tuo piano",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "Stanza per la compilazione di moduli",
   "docspace.room.type.collaboration": "Stanza di collaborazione",
   "docspace.room.type.public": "Stanza pubblica",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "Stanza di dati virtuale (VRD)",
   "docspace.room.type.custom": "Stanza personalizzata",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "Per raccogliere dati tramite moduli PDF",
+  "docspace.room.type.collaboration.short-description": "Per modificare documenti insieme al tuo team",
+  "docspace.room.type.public.short-description": "Per condividere file con utenti esterni e clienti",
+  "docspace.room.type.vdr.short-description": "Per garantire una protezione avanzata dei file",
+  "docspace.room.type.custom.short-description": "Da usare per qualsiasi esigenza personalizzata",
+  "docspace.room.type.form-filling-room.description": "Per raccogliere dati compilando moduli PDF.",
+  "docspace.room.type.collaboration.description": "Per collaborare su documenti, fogli di calcolo e presentazioni in tempo reale.",
+  "docspace.room.type.public.description": "Per condividere documenti con utenti esterni senza necessità di registrazione.",
+  "docspace.room.type.vdr.description": "Per archiviare e scambiare in modo sicuro informazioni riservate, ad esempio durante una due diligence.",
+  "docspace.room.type.custom.description": "Per utilizzare accessi e ruoli configurabili per diversi casi d’uso.",
   "error.common": "Qualcosa è andato storto. Ricarica l'app.",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "Per favore, compila questo campo",
+  "error.incorrect-docspace-address": "Indirizzo DocSpace non corretto, riprova",
+  "label.warning": "Attenzione",
+  "link.learn-more-room-types": "Scopri di più sui tipi di stanza.",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "Crea una stanza in ONLYOFFICE DocSpace per lavorare sui documenti relativi a questa trattativa.",
+  "room.login.description": "Accedi a ONLYOFFICE DocSpace per collaborare facilmente sui documenti di questa trattativa",
   "room.request-access.ok": "L'accesso alla stanza ONLYOFFICE DocSpace è stato concesso",
   "room.request-access.error": "Errore nell'accesso alla stanza ONLYOFFICE DocSpace",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "Errore nell'ottenere l'accesso alla stanza di ONLYOFFICE DocSpace, perché l'utente attuale non segue la trattativa.",
   "settings.authorization.deleting.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata eliminata con successo",
   "settings.authorization.saving.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata salvata con successo",
-  "settings.authorization.deleting.confirm-message": "",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.deleting.confirm-message": "Sei sicuro di voler uscire?",
+  "settings.authorization.unsuccessful": "Credenziali di accesso non valide. Controlla email e password e prova ad accedere di nuovo.",
   "settings.authorization.saving.error": "Impossibile salvare l'autorizzazione di ONLYOFFICE DocSpace",
-  "settings.authorization.title": "",
+  "settings.authorization.title": "Accedi al tuo DocSpace collegato per iniziare a usarlo con Pipedrive",
   "settings.authorization.subtitle.address": "Il tuo indirizzo DocSpace connesso è",
   "settings.authorization.status.authorized": "Hai effettuato l'accesso al tuo account ONLYOFFICE DocSpace con successo",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Autorizzazione",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "Benvenuto su DocSpace!",
+  "settings.authorization.welcome.option1": "Crea stanze per lavorare sui documenti delle trattative",
+  "settings.authorization.welcome.option2": "Modifica e collabora su documenti, fogli, presentazioni, moduli e PDF",
+  "settings.authorization.welcome.option3": "Archivia in modo sicuro tutti i dati delle tue trattative in un unico posto",
+  "settings.authorization.welcome.open-guide": "Apri la guida",
   "settings.connection.saving.error.undefined": "Impossibile salvare le impostazioni di ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.common-invalid-api-key": "",
+  "settings.connection.saving.error.common-invalid-api-key": "Chiave API di DocSpace non valida, riprova",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "Impossibile raggiungere ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
-  "settings.connection.saving.ok": "",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Chiave API non valida. Controlla la chiave e riprova.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Chiave API non valida. Assicurati che l'autore della chiave sia un amministratore di DocSpace e riprova.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Chiave API non valida. Controlla gli ambiti di accesso della chiave API in DocSpace e riprova.",
+  "settings.connection.saving.ok": "Le impostazioni di connessione a ONLYOFFICE DocSpace sono state salvate con successo. Ora puoi procedere con l’autorizzazione.",
+  "settings.connection.status.connected": "Il tuo DocSpace è stato collegato con successo",
+  "settings.connection.disconnection.description": "Se premi il pulsante Disconnetti, perderai l'accesso a ONLYOFFICE DocSpace. Questo rimuoverà i collegamenti tra Stanze e Trattative e disconnetterà tutti gli utenti.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace disconnesso con successo",
   "settings.connection.disconnection.error": "Impossibile disconnettere ONLYOFFICE DocSpace",
   "settings.connection.title": "Configura le impostazioni di connessione dell'app ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Collega il tuo ONLYOFFICE DocSpace a Pipedrive",
   "settings.connection.subtitle.change": "Cambia indirizzo o disconnetti il tuo ONLYOFFICE DocSpace da Pipedrive",
   "settings.connection.inputs.url.title": "Indirizzo di ONLYOFFICE DocSpace",
-  "settings.connection.inputs.url.description": "",
+  "settings.connection.inputs.url.description": "Inserisci l’URL del tuo DocSpace nel campo qui sopra, ad esempio https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "Chiave API ONLYOFFICE DocSpace",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.api-key.tooltip": "Prima di collegare l’app, accedi al tuo DocSpace, crea una nuova chiave API e inseriscila qui. Puoi scegliere i Permessi (Tutti) oppure un accesso limitato con questi ambiti richiesti per il corretto funzionamento: Profilo (Lettura), Contatti (Scrittura), Stanze (Scrittura).",
   "settings.connection.menu-item": "Connessione",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "Crea stanze",
+  "user-guide.page.1.step.1": "Inizia creando una stanza DocSpace direttamente dalla scheda della trattativa in Pipedrive.",
+  "user-guide.page.1.step.2": "Ogni stanza prende automaticamente il nome della trattativa, ad esempio: Trattativa - [nome della trattativa]",
+  "user-guide.page.1.step.3": "Questo ti aiuta a mantenere i documenti organizzati e collegati direttamente alla trattativa.",
+  "user-guide.page.2.title": "Sincronizza i permessi di accesso",
+  "user-guide.page.2.step.1": "Imposta i permessi per ogni partecipante alla stanza. Puoi concedere o limitare l’accesso a membri del team, clienti o collaboratori esterni.",
+  "user-guide.page.2.step.2": "Questo garantisce una condivisione sicura e una collaborazione basata sui ruoli.",
+  "user-guide.page.3.title": "Crea o carica documenti",
+  "user-guide.page.3.step.1": "Una volta creata la stanza, puoi:",
+  "user-guide.page.3.step.2": "Carica file esistenti: DOCX, XLSX, PPTX, PDF, ecc.",
+  "user-guide.page.3.step.3": "Crea nuovi file direttamente nella stanza: documenti di testo, fogli di calcolo o presentazioni.",
+  "user-guide.page.3.step.4": "Tutto viene salvato e collegato alla trattativa corrispondente."
 }
