--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "チームと文書を共同編集するために",
   "docspace.room.type.public.short-description": "外部ユーザーやクライアントとファイルを共有するため",
   "docspace.room.type.vdr.short-description": "高度なファイル保護を提供するために",
-  "docspace.room.type.custom.short-description": "",
+  "docspace.room.type.custom.short-description": "どのようなカスタム目的にも使用可能",
   "docspace.room.type.form-filling-room.description": "PDFフォームに記入することでデータを収集するために",
   "docspace.room.type.collaboration.description": "リアルタイムで文書、スプレッドシート、プレゼンテーションに共同作業するために",
   "docspace.room.type.public.description": "外部ユーザーと文書を共有する際に、登録を必要としないために",
@@ -81,9 +81,9 @@
   "settings.authorization.inputs.password": "パスワード",
   "settings.authorization.menu-item": "認証",
   "settings.authorization.welcome.title": "DocSpaceへようこそ！",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
+  "settings.authorization.welcome.option1": "契約書類を作業するためのルームを作成",
+  "settings.authorization.welcome.option2": "ドキュメント、シート、スライド、フォーム、PDFの編集と共同作業",
+  "settings.authorization.welcome.option3": "取引データを一箇所に安全に保管",
   "settings.authorization.welcome.open-guide": "ガイドを開く",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
   "settings.connection.saving.error.common-invalid-api-key": "無効なDocSpace APIキーです。もう一度お試しください。",
