--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Para coeditar documentos com sua equipe",
   "docspace.room.type.public.short-description": "Para compartilhar arquivos com usuários e clientes externos",
   "docspace.room.type.vdr.short-description": "Para fornecer proteção avançada de arquivos",
-  "docspace.room.type.custom.short-description": "",
+  "docspace.room.type.custom.short-description": "Para usar para qualquer finalidade personalizada",
   "docspace.room.type.form-filling-room.description": "Para coletar dados preenchendo formulários em PDF.",
   "docspace.room.type.collaboration.description": "Para colaborar em documentos, planilhas e apresentações em tempo real.",
   "docspace.room.type.public.description": "Para compartilhar documentos com usuários externos sem a necessidade de cadastro.",
@@ -81,9 +81,9 @@
   "settings.authorization.inputs.password": "Senha",
   "settings.authorization.menu-item": "Autorização",
   "settings.authorization.welcome.title": "Bem-vindo ao DocSpace!",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
+  "settings.authorization.welcome.option1": "Crie salas para trabalhar em documentos de negócios",
+  "settings.authorization.welcome.option2": "Edite e colabore em documentos, planilhas, slides, formulários e PDFs",
+  "settings.authorization.welcome.option3": "Armazene os dados dos seus negócios com segurança em um único lugar",
   "settings.authorization.welcome.open-guide": "Abrir Guia",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Chave de API do DocSpace inválida, tente novamente",
