--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Для редактирования документов вместе с вашей командой",
   "docspace.room.type.public.short-description": "Для обмена файлами с внешними пользователями и клиентами",
   "docspace.room.type.vdr.short-description": "Для обеспечения расширенной защиты файлов",
-  "docspace.room.type.custom.short-description": "",
+  "docspace.room.type.custom.short-description": "Для использования в любых индивидуальных целях",
   "docspace.room.type.form-filling-room.description": "Для сбора данных посредством заполнения PDF-форм.",
   "docspace.room.type.collaboration.description": "Для совместной работы над текстовыми документами, электронными таблицами и презентациями в режиме реального времени.",
   "docspace.room.type.public.description": "Для обмена документами с внешними пользователями без регистрации.",
@@ -81,9 +81,9 @@
   "settings.authorization.inputs.password": "Пароль",
   "settings.authorization.menu-item": "Авторизация",
   "settings.authorization.welcome.title": "Добро пожаловать в DocSpace!",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
+  "settings.authorization.welcome.option1": "Создавайте комнаты для работы над документами, связанными со сделкой",
+  "settings.authorization.welcome.option2": "Редактируйте текстовые документы, электронные таблицы, презентации, формы и PDF-файлы и работайте над ними совместно",
+  "settings.authorization.welcome.option3": "Храните информацию о сделках в одном безопасном месте",
   "settings.authorization.welcome.open-guide": "Открыть руководство",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Неверный ключ API DocSpace, попробуйте еще раз",
