--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -51,7 +51,7 @@
   "docspace.room.type.collaboration.short-description": "Para coeditar documentos con tu equipo",
   "docspace.room.type.public.short-description": "Para compartir archivos con usuarios externos y clientes",
   "docspace.room.type.vdr.short-description": "Para proporcionar proteccićon avanzada de archivos",
-  "docspace.room.type.custom.short-description": "",
+  "docspace.room.type.custom.short-description": "Para utilizar para cualquier propósito personalizado",
   "docspace.room.type.form-filling-room.description": "Recopilar datos mediante el llenado de formularios PDF",
   "docspace.room.type.collaboration.description": "Colaborar en documentos, hojas de cálculo y presentaciones en tiempo real",
   "docspace.room.type.public.description": "Compartir documentos con usuarios externos sin requerir registro",
@@ -81,9 +81,9 @@
   "settings.authorization.inputs.password": "Contraseña",
   "settings.authorization.menu-item": "Autorización",
   "settings.authorization.welcome.title": "¡Bienvenido a DocSpace!",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.option3": "",
+  "settings.authorization.welcome.option1": "Cree salas para trabajar en documentos de acuerdos",
+  "settings.authorization.welcome.option2": "Edite y colabore en documentos, hojas, diapositivas, formularios, PDF",
+  "settings.authorization.welcome.option3": "Almacene los datos de sus acuerdos de forma segura en un único lugar",
   "settings.authorization.welcome.open-guide": "Abrir guía",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "Clave de la API de DocSpace inválida, por favor inténtalo de nuevo.",
