fix: added translations "button.create"

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "Zu Deals",
   "button.reauthorize": "Erneut autorisieren",
   "button.settings": "Einstellungen öffnen",
+  "button.create": "Erstellen",
   "button.create.room": "Raum erstellen",
   "button.login": "Anmelden",
   "button.logout": "Abmelden",
