--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "Ir a tratos",
   "button.reauthorize": "Volver a autorizar",
   "button.settings": "Ir a configuración",
+  "button.create": "Crear",
   "button.create.room": "Crear sala",
   "button.login": "Iniciar sesión",
   "button.logout": "Cerrar sesión",
