--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "Aller aux Affaires",
   "button.reauthorize": "Re-autoriser",
   "button.settings": "Accéder aux paramètres",
+  "button.create": "Créer",
   "button.create.room": "Créer une salle",
   "button.login": "Se connecter",
   "button.logout": "Déconnexion",
