--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "Vai Deals",
   "button.reauthorize": "Riautorizza",
   "button.settings": "Vai a Impostazioni",
+  "button.create": "Crea",
   "button.create.room": "Crea stanza",
   "button.login": "Accedi",
   "button.logout": "Esci",
