--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "案件に移動",
   "button.reauthorize": "再認証",
   "button.settings": "設定に移動",
+  "button.create": "作成",
   "button.create.room": "ルームの作成",
   "button.login": "ログイン",
   "button.logout": "ログアウト",
