--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "Ir para Ofertas",
   "button.reauthorize": "Reautorizar",
   "button.settings": "Acesse Configurações",
+  "button.create": "Criar",
   "button.create.room": "Criar sala",
   "button.login": "Fazer login",
   "button.logout": "Sair",
