--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -21,6 +21,7 @@
   "button.deals": "Перейти к Сделкам",
   "button.reauthorize": "Авторизуйтесь повторно",
   "button.settings": "Перейти в настройки",
+  "button.create": "Создать",
   "button.create.room": "Создать комнату",
   "button.login": "Войти",
   "button.logout": "Выйти",
