fix: ru-RU/translation.json room types

--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -43,11 +43,11 @@
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
   "docspace.error.payment": "Комната не может быть создана, поскольку достигнут лимит на количество комнат, включенных в ваш текущий тарифный план.",
   "docspace.link.payments": "Обновить тарифный план",
-  "docspace.room.type.form-filling-room": "Комната заполнения форм",
-  "docspace.room.type.collaboration": "Комната для совместной работы",
-  "docspace.room.type.public": "Публичная комната",
-  "docspace.room.type.vdr": "Виртуальная комната данных (VRD)",
-  "docspace.room.type.custom": "Пользовательская комната",
+  "docspace.room.type.form-filling-room": "Комнату заполнения форм",
+  "docspace.room.type.collaboration": "Комнату для совместной работы",
+  "docspace.room.type.public": "Публичную комнату",
+  "docspace.room.type.vdr": "Виртуальную комнату данных (VRD)",
+  "docspace.room.type.custom": "Пользовательскую комнату",
   "docspace.room.type.form-filling-room.short-description": "Для сбора данных в PDF-формах",
   "docspace.room.type.collaboration.short-description": "Для редактирования документов вместе с вашей командой",
   "docspace.room.type.public.short-description": "Для обмена файлами с внешними пользователями и клиентами",
